clipping fix for long words in post

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,6 +546,7 @@ html {
 .post-body {
   padding-bottom: 72px;
   margin-bottom: 72px;
+  text-overflow: clip;
 }
 .post-template .post-body {
   padding-bottom: 36px;
